# llmcompare

./: README.md  lint.sh  pyproject.toml
birds_replication/: replicate_figure_15.py
docs/: api.md
examples/: configuration.py  example_1.py  example_1_free_form.py  example_2.py  example_2_rating.py  example_3_next_token.py  example_4_judges.py  example_5_x_modulo_57.py  example_6_tinker.py  example_7_openrouter.py  example_8_yaml.py  example_questions.yaml  free_form_question.py  full_example_x_mod_57.py  judges.py  model_adapter.py  next_token_question.py  openrouter.py  question_usage.py  questions.yaml  questions_in_yaml.py  rating_question.py  runner.py  runner_usage.py  tinker.py  x_mod_57.py
llmcomp/: __init__.py  config.py  model_adapters.py
llmcomp/finetuning/: manager.py  update_jobs.py
llmcomp/question/: question.py  result.py
llmcomp/runner/: model_adapter.py  runner.py
llmcompare/: __init__.py  config.py  utils.py
llmcompare/question/: judge.py  plots.py  question.py  result.py
llmcompare/runner/: chat_completion.py  client.py  config.py  runner.py  tokens.py
runner/: __init__.py  client.py  config.py  runner.py
scripts/: generate_api_docs.py
tests/: conftest.py  test_hash_and_cache.py  test_question.py  test_utils.py
