[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcompare"
version = "1.0.0"
description = "Research library for black-box experiments on language models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jan Betley", email = "jan.betley@gmail.com" },
]
dependencies = [
    "openai>=1.0.0",
    "pandas",
    "numpy",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "backoff",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/johny-b/llmcompare"
Repository = "https://github.com/johny-b/llmcompare"

[tool.hatch.build.targets.wheel]
packages = ["llmcompare"] 

[tool.ruff]
line-length = 120